--- a/Day 1 - Python Introduction/Intro Python for Data Science.ipynb
+++ b/Day 1 - Python Introduction/Intro Python for Data Science.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -401,20 +401,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Anchorage,828', 'Arlington,503', 'Atlanta,1379']\n"
+     ]
+    }
+   ],
    "source": [
     "#split the crime_rates.csv based on '\\n' filter\n",
     "rows = data.split('\\n')\n",
     "\n",
     "#print the first five rows\n",
-    "print(rows[0:5])"
+    "print(rows[2:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,11 +436,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[749, 371, 828, 503, 1379, 425, 408, 542, 1405, 835, 1288, 647, 974, 1383, 455, 658, 675, 615, 2122, 423, 362, 587, 543, 563, 168, 992, 1185, 617, 734, 1263, 784, 352, 397, 575, 481, 598, 1750, 399, 1172, 1294, 992, 522, 1216, 815, 639, 1154, 1993, 919, 594, 1160, 636, 752, 130, 517, 423, 443, 738, 503, 413, 704, 363, 401, 597, 1776, 722, 1548, 616, 1171, 724, 990, 169, 1177, 742]\n"
+     ]
+    }
+   ],
    "source": [
-    "type(int_crime_rates[0])"
+    "print(int_crime_rates)"
    ]
   },
   {
@@ -482,9 +498,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(8 == 8) # True\n",
     "print(8 != 8) # False\n",
@@ -494,9 +521,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "rates = [10, 15, 20]\n",
     "print(rates[0] > rates[1]) # False\n",
@@ -567,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,11 +613,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atlanta\n",
+      "Baltimore\n",
+      "Buffalo\n",
+      "Cleveland\n",
+      "Detroit\n",
+      "Indianapolis\n",
+      "Kansas City\n",
+      "Memphis\n",
+      "Miami\n",
+      "Milwaukee\n",
+      "Nashville\n",
+      "Newark\n",
+      "Oakland\n",
+      "Philadelphia\n",
+      "St. Louis\n",
+      "Stockton\n",
+      "Toledo\n",
+      "Washington\n"
+     ]
+    }
+   ],
    "source": [
-    "print(names)"
+    "for item in rows:\n",
+    "    nome, total = item.split(\",\")    \n",
+    "    if int(total) > 1000:\n",
+    "        print(nome)"
    ]
   },
   {
@@ -644,9 +708,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "berlin\n"
+     ]
+    }
+   ],
    "source": [
     "# Definition of countries and capital\n",
     "countries = ['spain', 'france', 'germany', 'norway']\n",
