terminando os exercícios de introdução a python

--- a/Day 1 - Python Introduction/Intro Python for Data Science.ipynb
+++ b/Day 1 - Python Introduction/Intro Python for Data Science.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -914,9 +914,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "[9.5, 10.75, 20.0, 18.0, 11.25]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create list areas\n",
     "areas = [11.25, 18.0, 20.0, 10.75, 9.50]\n",
@@ -924,8 +934,8 @@
     "# Print out the index of the element 20.0\n",
     "print(areas.index(20.0))\n",
     "\n",
-    "# Print out how often 14.5 appears in areas\n",
-    "print(areas.count(14.5))\n",
+    "# Print out how often 11.5 appears in areas\n",
+    "print(areas.count(11.25))\n",
     "\n",
     "# Reverse the orders of the elements in areas\n",
     "areas.reverse()\n",
@@ -936,9 +946,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negative\n",
+      "zero\n",
+      "positive\n"
+     ]
+    }
+   ],
    "source": [
     "# Python functions are defined using the \"def\" keyword. For example:\n",
     "\n",
@@ -1179,10 +1199,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entre com o nome do time:teste\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "#Lendo o CSV\n",
+    "data = open(\"data/nfl.csv\",\"r\")\n",
+    "dados = data.read() #Lendo o arquivo\n",
+    "rows = dados.split('\\n') #Separando os dados em linhas\n",
+    "soma=0\n",
+    "def nfl_wins(time):\n",
+    "    global soma \n",
+    "    for row in rows:\n",
+    "        #ano,jogos, time1, time2 = row.split(\",\")\n",
+    "        soma+=row.count(time)#Contando quantas vezes a palavra aparece no csv\n",
+    "    return soma\n",
+    "nome_time = input('Entre com o nome do time:') #Recebendo o nome do usuário\n",
+    "print(nfl_wins(nome_time)) #Imprimindo o que é retornado pela funcção "
+   ]
   }
  ],
  "metadata": {
