exercice about intermediate python for data science

--- a/Day 1 - Python Introduction/Intermediate Python for Data Science.ipynb
+++ b/Day 1 - Python Introduction/Intermediate Python for Data Science.ipynb
@@ -34,9 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Andrea Doria\n",
+      "Ford Edsel\n",
+      "Titanic\n",
+      "Ford Pinto\n",
+      "Lusitania\n",
+      "Yugo\n"
+     ]
+    }
+   ],
    "source": [
     "ships = [\"Andrea Doria\", \"Titanic\", \"Lusitania\"]\n",
     "cars = [\"Ford Edsel\", \"Ford Pinto\", \"Yugo\"]\n",
@@ -48,9 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['apple', 'monkey', 'cedar'], ['orange', 'dog', 'maple'], ['banana', 'cat', 'fig']]\n"
+     ]
+    }
+   ],
    "source": [
     "#adding columns\n",
     "things = [[\"apple\", \"monkey\"], [\"orange\", \"dog\"], [\"banana\", \"cat\"]]\n",
@@ -98,6 +119,49 @@
     ">```python\n",
     "apple_prices = [100, 101, 102, 105]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[200, 202, 204, 210]\n"
+     ]
+    }
+   ],
+   "source": [
+    "apple_prices = [100, 101, 102, 105]\n",
+    "apple_prices_doubled=[]\n",
+    "\n",
+    "for apple in apple_prices:\n",
+    "    apple_prices_doubled.append(apple*2)\n",
+    "    \n",
+    "print (apple_prices_doubled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 102, 104, 110]\n"
+     ]
+    }
+   ],
+   "source": [
+    "apple_prices_lowered=[]\n",
+    "for apple in apple_prices_doubled:\n",
+    "    apple_prices_lowered.append(apple-100)\n",
+    "print(apple_prices_lowered)"
    ]
   },
   {
@@ -718,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
