Inserindo os arquivos do segundo dia de minicurso

--- a/Day 1 - Python Introduction/Intermediate Python for Data Science.ipynb
+++ b/Day 1 - Python Introduction/Intermediate Python for Data Science.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,10 @@
      "text": [
       "10\n",
       "[ 5 10 15]\n",
-      "10\n"
+      "10\n",
+      "[[ 5 10 15]\n",
+      " [20 25 30]\n",
+      " [35 40 45]]\n"
      ]
     }
    ],
@@ -229,7 +232,8 @@
     "\n",
     "print(vector[0])\n",
     "print(matrix[0])\n",
-    "print(matrix[0][1])"
+    "print(matrix[0][1])\n",
+    "print(matrix)"
    ]
   },
   {
