--- a/Day 2 - Intro-computer-vision/knn/k-NN Classifier.ipynb
+++ b/Day 2 - Intro-computer-vision/knn/k-NN Classifier.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +144,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       0    1    2    3               4\n",
+      "0    5.1  3.5  1.4  0.2     Iris-setosa\n",
+      "1    4.9  3.0  1.4  0.2     Iris-setosa\n",
+      "2    4.7  3.2  1.3  0.2     Iris-setosa\n",
+      "3    4.6  3.1  1.5  0.2     Iris-setosa\n",
+      "4    5.0  3.6  1.4  0.2     Iris-setosa\n",
+      "5    5.4  3.9  1.7  0.4     Iris-setosa\n",
+      "6    4.6  3.4  1.4  0.3     Iris-setosa\n",
+      "7    5.0  3.4  1.5  0.2     Iris-setosa\n",
+      "8    4.4  2.9  1.4  0.2     Iris-setosa\n",
+      "9    4.9  3.1  1.5  0.1     Iris-setosa\n",
+      "10   5.4  3.7  1.5  0.2     Iris-setosa\n",
+      "11   4.8  3.4  1.6  0.2     Iris-setosa\n",
+      "12   4.8  3.0  1.4  0.1     Iris-setosa\n",
+      "13   4.3  3.0  1.1  0.1     Iris-setosa\n",
+      "14   5.8  4.0  1.2  0.2     Iris-setosa\n",
+      "15   5.7  4.4  1.5  0.4     Iris-setosa\n",
+      "16   5.4  3.9  1.3  0.4     Iris-setosa\n",
+      "17   5.1  3.5  1.4  0.3     Iris-setosa\n",
+      "18   5.7  3.8  1.7  0.3     Iris-setosa\n",
+      "19   5.1  3.8  1.5  0.3     Iris-setosa\n",
+      "20   5.4  3.4  1.7  0.2     Iris-setosa\n",
+      "21   5.1  3.7  1.5  0.4     Iris-setosa\n",
+      "22   4.6  3.6  1.0  0.2     Iris-setosa\n",
+      "23   5.1  3.3  1.7  0.5     Iris-setosa\n",
+      "24   4.8  3.4  1.9  0.2     Iris-setosa\n",
+      "25   5.0  3.0  1.6  0.2     Iris-setosa\n",
+      "26   5.0  3.4  1.6  0.4     Iris-setosa\n",
+      "27   5.2  3.5  1.5  0.2     Iris-setosa\n",
+      "28   5.2  3.4  1.4  0.2     Iris-setosa\n",
+      "29   4.7  3.2  1.6  0.2     Iris-setosa\n",
+      "..   ...  ...  ...  ...             ...\n",
+      "120  6.9  3.2  5.7  2.3  Iris-virginica\n",
+      "121  5.6  2.8  4.9  2.0  Iris-virginica\n",
+      "122  7.7  2.8  6.7  2.0  Iris-virginica\n",
+      "123  6.3  2.7  4.9  1.8  Iris-virginica\n",
+      "124  6.7  3.3  5.7  2.1  Iris-virginica\n",
+      "125  7.2  3.2  6.0  1.8  Iris-virginica\n",
+      "126  6.2  2.8  4.8  1.8  Iris-virginica\n",
+      "127  6.1  3.0  4.9  1.8  Iris-virginica\n",
+      "128  6.4  2.8  5.6  2.1  Iris-virginica\n",
+      "129  7.2  3.0  5.8  1.6  Iris-virginica\n",
+      "130  7.4  2.8  6.1  1.9  Iris-virginica\n",
+      "131  7.9  3.8  6.4  2.0  Iris-virginica\n",
+      "132  6.4  2.8  5.6  2.2  Iris-virginica\n",
+      "133  6.3  2.8  5.1  1.5  Iris-virginica\n",
+      "134  6.1  2.6  5.6  1.4  Iris-virginica\n",
+      "135  7.7  3.0  6.1  2.3  Iris-virginica\n",
+      "136  6.3  3.4  5.6  2.4  Iris-virginica\n",
+      "137  6.4  3.1  5.5  1.8  Iris-virginica\n",
+      "138  6.0  3.0  4.8  1.8  Iris-virginica\n",
+      "139  6.9  3.1  5.4  2.1  Iris-virginica\n",
+      "140  6.7  3.1  5.6  2.4  Iris-virginica\n",
+      "141  6.9  3.1  5.1  2.3  Iris-virginica\n",
+      "142  5.8  2.7  5.1  1.9  Iris-virginica\n",
+      "143  6.8  3.2  5.9  2.3  Iris-virginica\n",
+      "144  6.7  3.3  5.7  2.5  Iris-virginica\n",
+      "145  6.7  3.0  5.2  2.3  Iris-virginica\n",
+      "146  6.3  2.5  5.0  1.9  Iris-virginica\n",
+      "147  6.5  3.0  5.2  2.0  Iris-virginica\n",
+      "148  6.2  3.4  5.4  2.3  Iris-virginica\n",
+      "149  5.9  3.0  5.1  1.8  Iris-virginica\n",
+      "\n",
+      "[150 rows x 5 columns]\n",
+      "Iris-setosa: 50\n",
+      "Iris-versicolor: 50\n",
+      "Iris-virginica: 50\n"
+     ]
+    }
+   ],
    "source": [
     "# Carregando o dataset\n",
     "dataset = pd.read_csv(\"dataset/iris/dataset.csv\", header=None)\n",
@@ -177,9 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho trainset: 105\n",
+      "Tamanho testset: 45\n"
+     ]
+    }
+   ],
    "source": [
     "train_percentage = 0.7\n",
     "\n",
@@ -221,6 +304,7 @@
     "    distance = sorted(distance)\n",
     "    distance = [classes[1] for classes in distance[0:k]]\n",
     "    \n",
+    "    #Retorna o número de vetores por classe \n",
     "    most_common = Counter(distance)\n",
     "    return max(most_common, key=most_common.get)\n",
     "\n",
@@ -334,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
